--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,25 @@
-html,
-body {
-	width: 100vw;
-	height: 100vh;
-	box-sizing: border-box;
-	overflow-x: hidden;
+body{
+	width: 100%;
+	height: 100%;
+	cursor: pointer;       
 }
 
-.myCalc {
-	border: 0;
-	height: 70vh;
-	padding: 5vh 15px;
-	margin-top: 15vh;
-	background-color: rgba(40, 30, 210, .8);
-	border-radius: 25px;
-	box-sizing: border-box;
+#calc{
+	margin-top: 10vh;
 }
 
-.displayScreen {
-	background-color: #000;
-	color: #fff;
-	border-radius: 10px;
-	border: 0;
-	min-height: 10vh;
-	height: auto;
+.screen {
+	width: 100%;
+	height: 10vh;
+	border: 1px solid black;
 }
 
-.keyboard {
-	border: 0;
-	background-color: pink;
-	text-align: center;
-	width: 4em;
-	cursor: pointer;
+
+tr{
+	height: 10vh;
 }
 
-.focus {
-	background-color: #fff;
-}
-
-.sign {
-	background-color: #fff;
-}
-
-/*.display {*/
-/*-webkit-animation: 2s linear infinite condemed_blink_effect; pour safari*/
-/*animation: 800ms linear infinite condemed_blink_effect;
-	border-right: 1px solid #fff;
-	margin-right: .25em;
-}*/
-/*@-webkit-keyframes condemed_blink_effect { pour Safari 4.0-8.0
-	0% {
-		visibility: hidden;
-	}
-	50% {
-		visibility: hidden;
-	}
-	100% {
-		visibility: visible;
-	}
-}*/
-/*@keyframes condemed_blink_effect {
-	0% {
-		visibility: hidden;
-	}
-	50% {
-		visibility: hidden;
-	}
-	100% {
-		visibility: visible;
-	}
-}*/
+td {
+	width: 25vw;
+	vertical-align: middle;
+} 
