--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 .screen {
 	width: 100%;
 	height: 10vh;
-	border: 1px solid black;
+	border: 2px solid black;
 }
 
 
@@ -22,4 +22,5 @@ tr{
 td {
 	width: 25vw;
 	vertical-align: middle;
+	font-weight: 600;
 } 
