--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body{
 	width: 100%;
 	height: 100%;
-	cursor: pointer;       
+	cursor: pointer;  
+	background-color: rgb(187, 68, 68);
+	color: #fff;  
 }
 
 #calc{
@@ -12,6 +14,7 @@ body{
 	width: 100%;
 	height: 10vh;
 	border: 2px solid black;
+	background-color: #000;
 }
 
 
@@ -20,7 +23,16 @@ tr{
 }
 
 td {
-	width: 25vw;
+	border: 1px solid black;
+	width: 25%;
 	vertical-align: middle;
 	font-weight: 600;
+	color: #fff;
+	font-size: 1.5rem;
 } 
+
+td.text-center {
+	border: 2px solid black;
+}
+
+
