--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@ body{
 	width: 100%;
 	height: 100%;
 	cursor: pointer;  
-	background-color: rgb(187, 68, 68);
-	color: #fff;  
 }
 
 #calc{
@@ -14,25 +12,25 @@ body{
 	width: 100%;
 	height: 10vh;
 	border: 2px solid black;
-	background-color: #000;
 }
-
 
 tr{
 	height: 10vh;
 }
 
 td {
-	border: 1px solid black;
 	width: 25%;
 	vertical-align: middle;
 	font-weight: 600;
-	color: #fff;
 	font-size: 1.5rem;
-} 
-
-td.text-center {
-	border: 2px solid black;
 }
+
+/* box shadow effect */
+.neumorphism {
+	border-radius: 40px;
+	box-shadow: 5px 5px 20px #000, -5px -5px 20px #fff;
+}
+
+
 
 
